<resources>
    <string name="app_name">SiTaNi</string>
    <!--<string name="action_settings">Settings</string>-->
    <string name="action_settings">Tentang SiTaNi</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_brs">Progress</string>
    <string name="title_awe">Upload</string>
    <string name="search_hint">Search...</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_ens">Ensiklopedia</string>
    <string name="title_activity_fab">FabActivity</string>

    <string name="progress_prompt">Pilih jenis progress</string>
    <string-array name="progress_arrays">
        <item>SP Padi</item>
        <item>SP Palawija</item>
    </string-array>

    <string name="year_prompt">Pilih tahun</string>
    <string-array name="years_arrays">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>

    <string name="month_prompt">Pilih bulan</string>
    <string name="upload_text_summary">
        Menu ini diperuntukan khusus untuk admin SiTaNi.
        Klik tombol upload dibawah ini untuk update progress penerimaan SITANI.
        Mohon copy terlebih dahulu csv dan mdb SIMTP ke storage HP anda.
    </string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string-array name="months_arrays">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>

</resources>
