<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.virtualbox.torchick.rog.Activity.MainActivity">
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="never" />
    <!--app:showAsAction="always|collapseActionView"-->
</menu>
