<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <!--<TextView-->
        <!--android:id="@+id/textView1"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Type Your Message : "-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge" />-->

    <!--<EditText-->
        <!--android:id="@+id/editTextDialogUserInput"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" >-->

        <!--<requestFocus />-->

    <!--</EditText>-->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Progress Monitoring Setting"
        android:layout_marginBottom="10dp"/>

    <Spinner
        android:id="@+id/spinner_dokumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:entries="@array/progress_arrays"
        android:prompt="@string/progress_prompt" />

    <Spinner
        android:id="@+id/spinner_tahun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:entries="@array/years_arrays"
        android:prompt="@string/year_prompt" />

    <Spinner
        android:id="@+id/spinner_bulan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:entries="@array/months_arrays"
        android:prompt="@string/month_prompt" />
</LinearLayout>